--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,4 @@
 title: LumenPath HMS
-description: Hospital Management System — multi‑org deployment
+description: Hospital Management System — multi-organization deployment
 url: "https://shazej.github.io"
-baseurl: "" # user site must keep this empty
-permalink: pretty
-markdown: kramdown
-kramdown:
-input: GFM
+baseurl: ""   # MUST be empty for user sites
